# chess

./: .rustc_info.json  Cargo.toml
assets/models/: pieces.glb  pieces.gltf
src/: board.rs  camera.rs  components.rs  main.rs
src/board/: bundle.rs  cell.rs  component.rs  materials.rs  mod.rs  plugin.rs  resource.rs  resources.rs  startup.rs
src/game/: events.rs  mod.rs  plugin.rs  resource.rs  system.rs
src/piece/: bundle.rs  component.rs  helper.rs  mod.rs  plugin.rs  prelude.rs  resource.rs  startup.rs
src/pieces/: asset.rs  bundle.rs  components.rs  generator.rs  kind.rs  mesh.rs  mod.rs
src/pieces/resources/: materials.rs  meshes.rs  mod.rs
